--- a/Style.css
+++ b/Style.css
@@ -25,7 +25,7 @@ body {
     background-color: rgb(255, 255, 255);
     border-radius: 15px;
     margin-left: auto;
-    margin-top: 130px;
+    margin-top: 100px;
     margin-right: auto;
     gap: 77px;
 }
@@ -278,12 +278,12 @@ input:checked+.slider:before {
 .last-buttons {
     position: absolute;
     left: 850px;
-    top: 560px;
+    top: 540px;
 }
 .btn5 {
     left: 50px;
     position: absolute;
-    background-color: blue;
+    background-color: rgb(88, 88, 134);
     padding: 12px;
     width: 110px;
     color: #ffffff;
@@ -321,7 +321,7 @@ input:checked+.slider:before {
     gap: 20px;
     margin-left: 0px;
     align-items: center;
-    width: 360px;
+    width: 390px;
     height: 65px;
     border: 1px blue solid;
     border-radius: 12px;
@@ -497,10 +497,9 @@ input:checked+.slider:before {
 .main-div {
     justify-content: center;
     align-items: center;
-
     display: inline-block;
     margin-left: 8px;
-    margin-top: 120px;
+    margin-top: 50px;
 }
 
 .image1-sec6 {
@@ -513,7 +512,13 @@ input:checked+.slider:before {
 }
 
 .para {
+    width: 400px;
     margin-left: 0px;
     word-spacing: 2px;
     font-size: 14px;
+}
+
+.NameOfCoder{
+    text-align: center;
+    margin-top: 20px;
 }
